--- a/inventory.ini
+++ b/inventory.ini
@@ -1,28 +1,9 @@
 ########################################
-# HPCM / HPC INVENTORY
+# HPCM / HPE CRAY INVENTORY
 ########################################
 
 [hpcm_admin]
-REYNOLDS ansible_host=10.4.0.70 ansible_user=root
+hpcmadmin ansible_host=10.25.58.115 ansible_user=root
 
 [compute]
-rcn01 ansible_host=192.168.154.81 ansible_user=root
-rcn02 ansible_host=192.168.154.82 ansible_user=root
-rcn03 ansible_host=192.168.154.83 ansible_user=root
-rcn04 ansible_host=192.168.154.84 ansible_user=root
-rcn05 ansible_host=192.168.154.85 ansible_user=root
-rcn06 ansible_host=192.168.154.86 ansible_user=root
-rcn07 ansible_host=192.168.154.87 ansible_user=root
-rcn08 ansible_host=192.168.154.88 ansible_user=root
-rcn09 ansible_host=192.168.154.103 ansible_user=root
-rcn10 ansible_host=192.168.154.104 ansible_user=root
-rcn11 ansible_host=192.168.154.105 ansible_user=root
-rcn12 ansible_host=192.168.154.106 ansible_user=root
-rcn13 ansible_host=192.168.154.107 ansible_user=root
-rcn14 ansible_host=192.168.154.108 ansible_user=root
-rcn15 ansible_host=192.168.154.109 ansible_user=root
-rcn16 ansible_host=192.168.154.110 ansible_user=root
-rcn17 ansible_host=192.168.154.124 ansible_user=root
-rcn18 ansible_host=192.168.154.125 ansible_user=root
-rcn19 ansible_host=192.168.154.126 ansible_user=root
-rcn20 ansible_host=192.168.154.127 ansible_user=root
+gpu001 ansible_host=10.25.58.82 ansible_user=root
