--- a/hpcm_health_check_test.yml
+++ b/hpcm_health_check_test.yml
@@ -120,10 +120,18 @@
         content: "{{ cm_info.stdout }}"
         dest: "{{ output_dir }}/cm-info-gather.log"
 
-    - name: Find cm-info-gather archive
-      shell: ls -t /var/tmp/cm-info-gather-*.tar.bz2 | head -1
-      register: cm_info_tar
-      changed_when: false
+    - name: Find cm-info-gather archive safely
+      find:
+        paths: /var/tmp
+        patterns: "cm-info-gather-*.tar.bz2"
+      register: cm_info_files
+
+   - name: Copy cm-info-gather archive to output directory
+     fetch:
+       src: "{{ cm_info_files.files | sort(attribute='mtime', reverse=True) | map(attribute='path') | list | first }}"
+       dest: "{{ output_dir }}/"
+       flat: yes
+     when: cm_info_files.matched > 0
 
     - name: Copy cm-info-gather archive to output directory
       fetch:
