--- a/hpcm_health_check_test.yml
+++ b/hpcm_health_check_test.yml
@@ -153,7 +153,10 @@
         set +e
         {
           echo "================ COMPUTE NODE ================="
-
+          
+          echo "===== Hostname ====="
+          hostname
+          
           echo "===== OS Release ====="
           cat /etc/redhat-release || true
 
@@ -165,6 +168,21 @@
 
           echo "===== slurmd status ====="
           systemctl status slurmd | grep Active || true
+
+          echo "===== Kernel ====="
+          uname -r || true
+
+          echo "===== Memory ====="
+          free -h || true
+
+          echo "===== IP Addresses (hostname -I) ====="
+          hostname -I || true
+
+          echo "===== Disks (lsblk) ====="
+          lsblk || true
+          
+          echo "===== Mounts (df -Th) ====="
+          df -Th || true
 
           echo "===== Hardware ====="
           dmidecode -t system || true
